# junction23

./: .gitignore  README.md
next-app/: .env.local.template  .eslintrc.js  .prettierrc.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
next-app/app/: globals.css  layout.tsx  page.tsx
next-app/app/api/alert/: route.ts
next-app/app/api/summary/: route.ts
next-app/common/: types.ts
next-app/components/: Button.tsx  Card.tsx  Header.tsx  Label.tsx  LineItem.tsx  NewsCard.tsx  NewsFeed.tsx  Summary.tsx
next-app/data/: data.ts  risk-statuses.json
pipeline/: .gitignore  README.md  bing_search_news.ipynb  create-frontend-input.py  data-pipeline.sh  data.json  demo_app.py  fetch-disaster-data.py  fetch-news-data.py  generate_risk_analysis.py  get_disaster_data.py  get_events.py  get_news.py  news.ipynb  prompt_tools.py  pyproject.toml  queries.py  requirements.txt
plots/: energy_consumption.ipynb
