[tool.poetry]
name = "junction-data-pipeline"
version = "0.1.0"
description = ""
authors = ["shiftleino <shiftleino@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
ipykernel = "^6.26.0"
azure-storage-blob = "^12.19.0"
azure-identity = "^1.15.0"
geopy = "^2.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
